--- a/fm01.htm
+++ b/fm01.htm
@@ -16,6 +16,7 @@ function show01(form){
         border:5px dotted royalblue;
         background-color:lemonchiffon;
         padding:30px;
+        border-radius:10px;
     }
     .but1{
         background-color: aquamarine;
